- spring security - get jwt toke endpoint has been implemented - all users passwords has been salted - minor code fix
