# gen/codegen/src/main/resources/openapi.yaml
@@ -13,6 +13,8 @@ tags:
   name: emails
 - description: User phone number management
   name: phones
+- description: Authentication entrypoint
+  name: auth
 paths:
   /users:
     get:
@@ -105,7 +107,7 @@ paths:
       description: Retrieve user information by ID
       operationId: getUserById
       parameters:
-      - description: ID of the user
+      - description: user id
         explode: false
         in: path
         name: userId
@@ -141,7 +143,7 @@ paths:
         - Add/change/remove phone (if not used by another user)
       operationId: updateUserData
       parameters:
-      - description: ID of the user
+      - description: user id
         explode: false
         in: path
         name: userId
@@ -436,41 +438,37 @@ paths:
       x-accepts: application/json
       x-tags:
       - tag: phones
+  /auth:
+    post:
+      description: login user and create new jwt token
+      operationId: login
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequest'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+          description: Login successfully
+        "403":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Forbidden
+      summary: Authentication entrypoint
+      tags:
+      - auth
+      x-content-type: application/json
+      x-accepts: application/json
+      x-tags:
+      - tag: auth
 components:
-  parameters:
-    userId:
-      description: ID of the user
-      explode: false
-      in: path
-      name: userId
-      required: true
-      schema:
-        format: int64
-        type: integer
-      style: simple
-    page:
-      description: Page number (0-based)
-      explode: true
-      in: query
-      name: page
-      required: false
-      schema:
-        default: 0
-        minimum: 0
-        type: integer
-      style: form
-    size:
-      description: Number of items per page
-      explode: true
-      in: query
-      name: size
-      required: false
-      schema:
-        default: 20
-        maximum: 100
-        minimum: 1
-        type: integer
-      style: form
   schemas:
     Page:
       description: Page
@@ -616,6 +614,22 @@ components:
           type: string
       required:
       - message
+      type: object
+    LoginRequest:
+      example:
+        password: password
+        email: ivan@mail.com
+      properties:
+        email:
+          description: user email for auth
+          example: ivan@mail.com
+          type: string
+        password:
+          description: user password
+          type: string
+      required:
+      - email
+      - password
       type: object
     Page_elements_inner:
       oneOf:
